; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_range-file.c_rangeparse_err.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_range-file.c_rangeparse_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RangeParser = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.RangeParser*, i64*, i64*)* @rangeparse_err to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rangeparse_err(%struct.RangeParser* %0, i64* %1, i64* %2) #0 {
  %4 = alloca %struct.RangeParser*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  store %struct.RangeParser* %0, %struct.RangeParser** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = load %struct.RangeParser*, %struct.RangeParser** %4, align 8
  %8 = getelementptr inbounds %struct.RangeParser, %struct.RangeParser* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64*, i64** %5, align 8
  store i64 %9, i64* %10, align 8
  %11 = load %struct.RangeParser*, %struct.RangeParser** %4, align 8
  %12 = getelementptr inbounds %struct.RangeParser, %struct.RangeParser* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load i64*, i64** %6, align 8
  store i64 %13, i64* %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
